# internal/infraestructure/drivenadapters/mailtrap/mail_adapter.go
@@ -1,0 +1,42 @@
+package mailtrap
+
+import (
+	"bytes"
+	"html/template"
+
+	"gopkg.in/gomail.v2"
+)
+
+func (m *MailTrapClient) Send(templateFile, username, email string, data any, isSandbox bool) (int, error) {
+	tmpl, err := template.ParseFS(FS, "templates/"+templateFile)
+	if err != nil {
+		return -1, err
+	}
+
+	subject := new(bytes.Buffer)
+	err = tmpl.ExecuteTemplate(subject, "subject", data)
+	if err != nil {
+		return -1, err
+	}
+
+	body := new(bytes.Buffer)
+	err = tmpl.ExecuteTemplate(body, "body", data)
+	if err != nil {
+		return -1, err
+	}
+
+	message := gomail.NewMessage()
+	message.SetHeader("From", m.fromEmail)
+	message.SetHeader("To", email)
+	message.SetHeader("Subject", subject.String())
+
+	message.AddAlternative("text/html", body.String())
+
+	dialer := gomail.NewDialer(m.host, m.port, m.username, m.apiKey)
+
+	if err := dialer.DialAndSend(message); err != nil {
+		return -1, err
+	}
+
+	return 200, nil
+}
